--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "exercice.C": "cpp",
         "tempCodeRunnerFile.C": "cpp",
         "exercice11.C": "cpp",
-        "bruh.C": "cpp"
+        "bruh.C": "cpp",
+        "exercice12.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
