--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "tempCodeRunnerFile.C": "cpp",
         "exercice11.C": "cpp",
         "bruh.C": "cpp",
-        "exercice12.C": "cpp"
+        "exercice12.C": "cpp",
+        "exercice19.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
