--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "exercice11.C": "cpp",
         "bruh.C": "cpp",
         "exercice12.C": "cpp",
-        "exercice19.C": "cpp"
+        "exercice19.C": "cpp",
+        "exercice23.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
