--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,8 @@
         "bruh.C": "cpp",
         "exercice12.C": "cpp",
         "exercice19.C": "cpp",
-        "exercice23.C": "cpp"
+        "exercice23.C": "cpp",
+        "exercice06.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
